fix overflow for modals

--- a/src/app/peerpharm/procurement/new-procurement/new-procurement.component.scss
+++ b/src/app/peerpharm/procurement/new-procurement/new-procurement.component.scss
@@ -41,7 +41,7 @@ input:hover {
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: 7460ee;
+    background: rgb(226, 180, 80);
     border-radius: 10px;
   }
   
