--- a/src/app/peerpharm/procurement/procumentOrders/procurementOrders.component.scss
+++ b/src/app/peerpharm/procurement/procumentOrders/procurementOrders.component.scss
@@ -29,13 +29,36 @@ input:focus::-webkit-input-placeholder {
   
 }
 
+.modal-inner {
+  max-height: 900px;
+  overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(226, 180, 80);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4e3bcf;
+}
+
 .big {
   font-size: 30px
 }
 
-.new-purchase-modal {
-  width: 75% !important;
-}
 
 .flame{
   background-color: rgb(252, 76, 76);
